Archive2/9a/191a8a0e01f3b3/output
main.cpp:1:6: error: 'List' has not been declared
 void List::InsertBack(int x)
      ^
main.cpp: In function 'void InsertBack(int)':
main.cpp:3:5: error: 'Node' was not declared in this scope
     Node *temp = root;
     ^
main.cpp:3:11: error: 'temp' was not declared in this scope
     Node *temp = root;
           ^
main.cpp:3:18: error: 'root' was not declared in this scope
     Node *temp = root;
                  ^
main.cpp:4:11: error: 'nNode' was not declared in this scope
     Node *nNode = new Node(x);
           ^
main.cpp:4:23: error: expected type-specifier before 'Node'
     Node *nNode = new Node(x);
                       ^
main.cpp:6:17: error: 'NULL' was not declared in this scope
     if (root == NULL)
                 ^
